fixed footer on small screens

--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -1,7 +1,6 @@
 @import "src/styles";
 
 .footer-container {
-  margin-top: 100px;
   background-color: $tennis-grey;
   width: 100%;
   height: 250px;
